# emphasis

./: README.md  meson.build
data/: com.github.tintou.emphasis.desktop  meson.build
po/: POTFILES  fr.po
src/: CompositionView.vala  MainWindow.vala  ProjectView.vala  Timeline.vala  main.vala  meson.build
src/Objects/: CompositionClip.vala  CompositionClipAsset.vala  CompositionSource.vala  CompositionSourceAsset.vala
src/Widgets/: CompositionWidget.vala  LayerWidget.vala  Ruler.vala
vapi/: gst-editing-services-1.0.deps  gst-editing-services-1.0.vapi
