install_data(
    'com.github.tintou.emphasis.desktop',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'applications')
)

install_data(
    'com.github.tintou.emphasis.svg',
    install_dir: join_paths(get_option('prefix'), get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)
